# rustybf

./: .gitignore  Cargo.toml  LICENSE  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
benches/: benches.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  (+4 more)
implementors/lazy_static/: trait.LazyStatic.js
rustybf/: all.html  index.html  sidebar-items.js
rustybf/compiler/: enum.InputTarget.html  enum.OutputTarget.html  index.html  sidebar-items.js  struct.CompiledProgram.html  struct.Compiler.html
rustybf/error/: enum.BrainfuckError.html  index.html  sidebar-items.js
rustybf/interpreter/: index.html  sidebar-items.js  struct.Interpreter.html  struct.InterpreterBuilder.html
rustybf/optimizer/: index.html  sidebar-items.js  struct.ALL_OPTIMIZATIONS.html  struct.DEFAULT_OPTIMIZATION_PASSES.html  struct.Optimizer.html  trait.Pass.html
rustybf/parser/: enum.Instruction.html  fn.parse.html  index.html  sidebar-items.js  struct.Position.html
scripts/: build-plots.sh  relativize-time.py  times.sh
src/: compiler.rs  error.rs  interpreter.rs  lib.rs  main.rs  parser.rs
src/optimizer/: collapse_increments.rs  dead_code.rs  mod.rs  passes.rs
src/rustybf/: compiler.rs.html  error.rs.html  interpreter.rs.html  lib.rs.html  parser.rs.html
tests/: example_programs.rs  interpreter.rs
(+13 files in other folders)
