[package]
name = "rustybf"
version = "0.1.0"
authors = ["Marco Cameriero <me@marcocameriero.net>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
log = "0.4.7"
env_logger = "0.6.2"
lazy_static = "1.3.0"
itertools = "0.8.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
tempfile = "3.1.0"

[dev-dependencies]
glob = "0.3.0"
paste = "0.1.5"
